 - Fixed: Clicking OT with an ORAS savegame loaded will load the OT/Region data to the tabbed Pokémon (XY already worked).
 - Fixed: Changing Countries with certain SubRegions selected will no longer error. Thanks FullLifeGames!
 - Fixed: Add ORAS Items to Memory Item Usage List. Thanks liopds!
 - Fixed: Trash Bytes now are no longer cleared when saving data. Thanks SciresM & Lunarcookies!
 - Fixed: Re-ordered controls to make tabbing flow down the form. Thanks Favna!
 - Fixed: Vivillon Form selection in the Trainer Info editor will now function with refactored code. Thanks KingGengar & Favna!
 - Fixed: New PKRS capping code will now behave properly. Thanks Favna and evandixon!
 - Changed: PKRS Days capped at legal limits.
 - Changed: Forms drop-down and label will be hidden if a Pokémon has no forms.
 - Hotfix: Changing the exe name to auto-load a language will now function properly. Thanks supercarotte!
 - Hotfix: Wondercard QRs with non-held items will no longer error out. Thanks ShinyMeganium!
 - Hotfix: Prevented export of Eon Ticket Wondercards via QR because extra data has to be altered in order for it to function.

8/8/15 - New Update:
 - Added: Korean Translation. Thanks cocoblue!
 - Added: Can now copy current moves to Relearn Moves by clicking on the Current Moves groupBox.
 - Fixed: Showdown Import made a little more flexible for non-exported sets (ie, user created with mistakes). Thanks Favna!
 - Fixed: Showdown Import now recogizes even more edge cases. Thanks Odaxis!
 - Fixed: Fill Dex now doesn't error out. Thanks ShaKage!
 - Fixed: Characteristics should now display properly for all cases. Thanks fcugqx!
 - Changed: The program now keeps track of the current box to mimic the ingame box system. Thanks codemonkey85!
 - Fixed: Saving the current box will no longer cause black screens when saving on the Party / Battle Box tab. Thanks RustInPeace!